--- a/front-end/src/components/Chat/Chat.css
+++ b/front-end/src/components/Chat/Chat.css
@@ -4,7 +4,7 @@
   margin: 30px;
   min-height: 30rem;
 }
-form {
+.chat-form {
   max-width: 350px;
   border-radius: 5px;
   padding: 20px;
@@ -35,4 +35,23 @@ h3 {
 
 span {
   color: black;
+}
+
+.bottom-nav {
+  width: 45vw;
+  background-color: #ace;
+  position: absolute;
+  bottom: 0;
+  cursor: pointer;
+  box-shadow: 0px -2px 5px 0px rgba(170, 204, 238, 1),
+    0px -4px 5px 0px rgba(160, 185, 219, 1);
+  border-radius: 8px 0px;
+  transition: 0.2s;
+}
+
+.bottom-nav:hover {
+  background-color: rgb(153, 185, 218);
+  box-shadow: 0px -3px 5px 0px rgba(153, 185, 218, 1),
+    0px -5px 5px 0px rgb(115, 123, 133);
+  transition: 0.2s;
 }
