--- a/front-end/src/components/Container/Container.css
+++ b/front-end/src/components/Container/Container.css
@@ -1,9 +1,10 @@
 .map-container {
   box-sizing: border-box;
   display: flex;
-  width: 60vw;
+  width: 55vw;
   height: 90vh;
   /* border: 3px solid #ffb663; */
+  border-right: 1px solid gray;
   padding-right: 50px;
   padding-top: 30px;
 }
@@ -11,9 +12,9 @@
 .jobs-container {
   box-sizing: border-box;
   /* border: 3px solid #02539b; */
-  width: 40vw;
+  width: 45vw;
   height: 90vh;
-  padding-right: 20px;
+  /* padding-right: 20px; */
 }
 
 .containers {
