feature: Animation for toggling job states implemented needs tweaking

--- a/front-end/src/components/Jobs/Jobs.css
+++ b/front-end/src/components/Jobs/Jobs.css
@@ -1,3 +1,51 @@
-.MuiGrid-container {
-  display: block !important;
+.slide-enter {
+  opacity: 0;
+  position: absolute;
+}
+.slide-enter-active {
+  opacity: 1;
+  transition: opacity 500ms;
+  position: absolute;
+}
+.slide-exit {
+  opacity: 1;
+  position: absolute;
+}
+.slide-exit-active {
+  opacity: 0;
+  transition: opacity 200ms;
+  position: absolute;
+}
+
+/* appear - on page load */
+.fade-appear {
+  opacity: 0;
+  z-index: 1;
+}
+.fade-appear.fade-appear-active {
+  opacity: 1;
+  transition: opacity 1000ms linear;
+}
+
+/* enter */
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 5000ms linear 5000ms;
+}
+
+/* exit */
+.fade-exit {
+  opacity: 1;
+  position: absolute;
+}
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 5000ms linear;
+}
+.fade-exit-done {
+  opacity: 0;
 }
