--- a/front-end/src/components/Chat/Chat.css
+++ b/front-end/src/components/Chat/Chat.css
@@ -140,19 +140,18 @@ span {
   width: 100%;
   height: 100vh;
   background: #eeeef1;
-
   grid-template-columns: 350px auto;
   grid-template-rows: 60px auto 60px;
   grid-column-gap: 1px;
   grid-row-gap: 1px;
 }
 
-/* body {
+body {
   font-family: helvetica;
   display: flex ;
   flex-direction: column;
   align-items: center;
-} */
+}
 
 .chat {
   width: 300px;
@@ -246,4 +245,10 @@ span {
   height: 20px;
   background: white;
   border-bottom-left-radius: 10px;
+}
+
+.chat-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
