--- a/front-end/src/components/Chat/Chat.css
+++ b/front-end/src/components/Chat/Chat.css
@@ -47,6 +47,7 @@ span {
     0px -4px 5px 0px rgba(160, 185, 219, 1);
   border-radius: 8px 0px;
   transition: 0.2s;
+  z-index: 10;
 }
 
 .bottom-nav:hover {
@@ -55,85 +56,6 @@ span {
     0px -5px 5px 0px rgb(115, 123, 133);
   transition: 0.2s;
 }
-
-/* .message-list-container {
-  padding: 10px;
-  padding-bottom: 70px;
-} */
-
-/* .message {
-  display: flex;
-  flex-direction: column;
-} */
-
-/* .message .timestamp {
-  display: flex;
-  justify-content: center;
-  color: #999;
-  font-weight: 600;
-  font-size: 12px;
-  margin: 10px 0px;
-  text-transform: uppercase;
-}
-
-.message .bubble-container {
-  font-size: 14px;
-  display: flex;
-}
-
-.message.mine .bubble-container {
-  justify-content: flex-end;
-}
-
-.message.start .bubble-container .bubble {
-  margin-top: 10px; 
-  border-top-left-radius: 20px;
-}
-
-.message.end .bubble-container .bubble {
-  border-bottom-left-radius: 20px;
-  margin-bottom: 10px; 
-} 
-
-.message.mine.start .bubble-container .bubble {
-  margin-top: 10px;
-  border-top-right-radius: 20px;
-}
-
-.message.mine.end .bubble-container .bubble {
-  border-bottom-right-radius: 20px;
-  margin-bottom: 10px;
-}
-
-.message .bubble-container .bubble {
-  margin: 1px 0px;
-  background: #f4f4f8;
-  padding: 10px 15px;
-  border-radius: 20px;
-  max-width: 75%;
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-} */
-
-/* .message.mine .bubble-container .bubble {
-  background: #007aff;
-  color: white;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
-} */
-
-/* .message {
-  background: #007aff;
-  color: white;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
-} */
 
 .messenger {
   display: grid;
@@ -200,7 +122,7 @@ body {
 .yours .message.last:after {
   content: "";
   position: absolute;
-  z-index: 1;
+  z-index: 0;
   bottom: 0;
   left: -10px;
   width: 10px;
@@ -251,4 +173,5 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: scroll
 }
