--- a/front-end/src/components/Chat/Chat.css
+++ b/front-end/src/components/Chat/Chat.css
@@ -4,11 +4,41 @@
   margin: 30px;
   min-height: 30rem;
 }
-.chat-form {
-  max-width: 350px;
-  border-radius: 5px;
-  padding: 20px;
-  box-shadow: 0px 3px 24px -8px rgba(0, 0, 0, 0.75);
+
+.message-container {
+  position: fixed;
+  bottom: 200px;
+  width: 50%;
+  overflow: hidden;
+}
+
+.message-input {
+  height: 10px;
+  width: 40%;
+  padding: 15px;
+  border-radius: 10px;
+  background: #eeeeee;
+  font-size: 16px;
+  border: none;
+  margin-right: 3px;
+}
+
+.message-btn {
+  height: 40px;
+  background: #03afdf;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+}
+
+.message-btn:hover {
+  background: #0483a7;
+}
+
+.message-input:focus {
+  outline: none;
 }
 
 .name-field {
@@ -40,7 +70,7 @@ span {
 .bottom-nav {
   width: 45vw;
   background-color: #ace;
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   cursor: pointer;
   box-shadow: 0px -2px 5px 0px rgba(170, 204, 238, 1),
@@ -173,5 +203,5 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: scroll
+  overflow: scroll;
 }
