--- a/front-end/src/components/Container/Container.css
+++ b/front-end/src/components/Container/Container.css
@@ -4,22 +4,42 @@
   width: 60vw;
   height: 90vh;
   /* border: 3px solid #ffb663; */
-  border-right: 1px solid gray;
+  /* border-right: 1px solid gray; */
   padding-right: 20px;
   padding-top: 20px;
 }
 
 .jobs-container {
+  margin-top: 500px;
   box-sizing: border-box;
   /* border: 3px solid #02539b; */
-  width: 40vw;
-  height: 90vh;
+  width: 100%;
+  height: 85vh;
   /* padding-right: 20px; */
   margin: 0 auto;
   overflow: scroll;
+  overflow-x: hidden;
+  align-items: center;
+  justify-content: center;
 }
 
 .containers {
   display: flex;
 }
 
+.page-containers {
+  display: flex;
+  width: 100vw;
+}
+
+.right-container {
+  /* border: 3px solid black; */
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+  width: 40vw;
+}
+
+.chat-container {
+  margin-top: 10px;
+}
