--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,14 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Merriweather:wght@300&family=RocknRoll+One&display=swap");
+
 html {
   box-sizing: border-box;
   margin: 0;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-
-    /* overflow: scroll; */
+  /* font-family: "RocknRoll One", sans-serif !important; */
+  font-family: "Merriweather", serif !important;
+  /* font-family: "Josefin Sans", sans-serif; */
+  /* overflow: scroll; */
   overflow: hidden;
 }
 
