--- a/front-end/src/components/JobList/JobList.css
+++ b/front-end/src/components/JobList/JobList.css
@@ -10,9 +10,14 @@
   margin: 12px 5px;
 }
 .accept {
-  border-radius: 50%;
+  border-radius: 8px;
   background-color: #078282ff;
   border: none;
+  margin: 5px;
+  /* border: 1px solid grey; */
+
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .accept:focus {
@@ -20,12 +25,17 @@
   background-color: rgb(11, 99, 99);
   outline-style: none;
   color: white;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .decline {
-  border-radius: 50%;
+  border-radius: 8px;
   background-color: #ed3537;
   border: none;
+  margin: 5px;
+  /* border: 1px solid grey; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .decline:focus {
@@ -33,6 +43,7 @@
   background-color: #b1272a;
   outline-style: none;
   color: white;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .item-row {
@@ -94,7 +105,7 @@
   background-color: #00539cff;
   outline-style: none;
   color: white;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 
 .accordion__button,
