--- a/front-end/src/components/Container/Container.css
+++ b/front-end/src/components/Container/Container.css
@@ -5,7 +5,7 @@
   height: 90vh;
   /* border: 3px solid #ffb663; */
   /* border-right: 1px solid gray; */
-  padding-right: 60px;
+  padding-right: 45px;
   padding-top: 20px;
 }
 
@@ -21,6 +21,7 @@
   overflow-x: hidden;
   align-items: center;
   justify-content: center;
+  margin-bottom: 60px;
 }
 
 .containers {
@@ -30,16 +31,18 @@
 .page-containers {
   display: flex;
   width: 100vw;
+  height: 100vh;
 }
 
 .right-container {
   /* border: 3px solid black; */
   display: flex;
   flex-direction: column;
-  height: 90vh;
+  height: 100vh;
   width: 40vw;
+  bottom: 0;
 }
 
 .chat-container {
-  margin-top: 6px;
+  margin-top: 60px;
 }
