--- a/front-end/src/components/Map/Map.css
+++ b/front-end/src/components/Map/Map.css
@@ -1,12 +1,18 @@
 .find-me {
   position: relative;
   z-index: 2;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(0, 0, 0, 0.15);
+  margin-left: 5px;
+  border-radius: 10px;
+  /* border: 2px dashed #00539cff; */
+  border: 1px dashed white;
 }
 
 .find-me img {
   width: 15px;
   height: 15px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
 }
 
 .address-search {
