Added new accordion and finished a ton of styling

--- a/front-end/src/components/Map/Map.css
+++ b/front-end/src/components/Map/Map.css
@@ -27,4 +27,12 @@
 
 .map-title {
   font-size: 2em;
+  text-align: center;
 }
+
+/* .gmnoprint {
+  margin-bottom: 80px;
+  background-color: transparent;
+
+} */
+
