--- a/front-end/src/components/Chat/Chat.css
+++ b/front-end/src/components/Chat/Chat.css
@@ -70,25 +70,29 @@ span {
 
 .bottom-nav {
   width: 160px;
-  background-color: #ace;
+  background-color: chocolate;
   position: absolute;
   /* top: 85px; */
   bottom: 0;
   cursor: pointer;
-  box-shadow: 0px -2px 5px 0px rgba(170, 204, 238, 1),
-    0px -4px 5px 0px rgba(160, 185, 219, 1);
-  border-radius: 8px;
+  /* box-shadow: 2px -1px 2px 0px rgba(210, 105, 30, 1),
+    0px -2px 2px 0px rgba(210, 105, 30, 1); */
+  border-radius: 8px 0px 0px 0px;
   transition: 0.2s;
   z-index: 10;
   right: 0px;
   height: 48px;
+  color: white;
 }
 
 .bottom-nav:hover {
-  background-color: rgb(153, 185, 218);
+  /* background-color: rgb(153, 185, 218); */
+  background-color: chocolate;
   width: 300px;
-  box-shadow: 0px -3px 5px 0px rgba(153, 185, 218, 1),
-    0px -5px 5px 0px rgb(115, 123, 133);
+  /* box-shadow: 0px -3px 5px 0px rgba(153, 185, 218, 1),
+    0px -5px 5px 0px rgb(115, 123, 133); */
+    box-shadow: -2px -1px 2px 4px rgba(210, 105, 30, 1);
+    /* 0px -2px 2px 0px rgba(210, 105, 30, 1); */
   transition: 0.2s;
 }
 
