--- a/front-end/src/components/Container/Container.css
+++ b/front-end/src/components/Container/Container.css
@@ -10,13 +10,10 @@
 }
 
 .jobs-container {
-  margin-top: 500px;
   box-sizing: border-box;
-  /* border: 3px solid #02539b; */
   width: 45vw;
   height: 85vh;
-  padding-left: 20px;
-  margin: 0 auto;
+  /* padding-left: 20px; */
   overflow: scroll;
   overflow-x: hidden;
   align-items: center;
@@ -37,6 +34,7 @@
 .right-container {
   /* border: 3px solid black; */
   display: flex;
+  align-items: center;
   flex-direction: column;
   height: 100vh;
   width: 40vw;
@@ -46,3 +44,8 @@
 .chat-container {
   margin-top: 60px;
 }
+
+/* .view-container {
+  z-index: 5;
+  background-color: white;
+} */
