--- a/front-end/src/components/JobList/JobList.css
+++ b/front-end/src/components/JobList/JobList.css
@@ -3,52 +3,22 @@
 }
 
 .jobListItem {
-  background-color: #00539cff;
-  color: #f9cb9c;
+  position: relative;
+  /* background-color: #00539cff; */
+  background-color: #9fc5e7;
+  /* color: #f9cb9c; */
+  color: #00539cff;
   border-radius: 10px;
   width: 80%;
   margin: 12px 5px;
-}
-.accept {
-  border-radius: 8px;
-  background-color: #078282ff;
-  border: none;
-  margin: 5px;
-  /* border: 1px solid grey; */
-
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  padding: 15px 25px;
 }
 
-.accept:focus {
-  outline: none;
-  background-color: rgb(11, 99, 99);
-  outline-style: none;
-  color: white;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-
-.decline {
-  border-radius: 8px;
-  background-color: #ed3537;
-  border: none;
-  margin: 5px;
-  /* border: 1px solid grey; */
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
-
-.decline:focus {
-  outline: none;
-  background-color: #b1272a;
-  outline-style: none;
-  color: white;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
 
 .item-row {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .jobListItem h1 {
@@ -63,8 +33,11 @@
 }
 
 .date {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 15px;
   font-size: 1em;
-  margin: 5px;
+  display: flex;
 }
 
 .rate {
@@ -95,8 +68,13 @@
   margin: 5px;
 } */
 
-.offerlist-item {
-  color: #00539cff;
+.offer-list-item {
+  /* color: #00539cff; */
+  color: #fff;
+  background: #00539cff;
+  padding: 15px;
+  height: 75px;
+  border-radius: 10px;
 }
 
 .status-element {
@@ -108,49 +86,7 @@
   border-radius: 5px;
 }
 
-.accordion__button,
-.accordian__item:visited {
-  background-color: #00539cff;
-  color: #f9cb9c;
-  cursor: pointer;
-  padding: 15px;
-  width: 100%;
-  text-align: left;
-  border-radius: 4px;
-  outline: none;
-  border: none;
-  outline-style: none;
-  /*   display: flex; */
-}
 
-.accordion__button:before {
-  display: inline-block;
-  content: "";
-  height: 10px;
-  width: 10px;
-  margin-right: 12px;
-  border-bottom: 2px solid currentColor;
-  border-right: 2px solid currentColor;
-  transform: rotate(-45deg);
-}
-
-.accordion__button[aria-expanded="true"]::before,
-.accordion__button[aria-selected="true"]::before {
-  transform: rotate(45deg);
-}
-
-[hidden] {
-  display: none;
-}
-
-.accordion__panel {
-  width: 101.3%;
-  border-radius: 0px 0px 10px 10px;
-  padding: 20px;
-  background-color: rgba(170, 204, 308, 0.8);
-  animation: fadein 0.35s ease-in;
-  box-shadow: inset 0px 6px 8px -2px rgba(0, 83, 156, 0.91);
-}
 
 .item-row-2 h1 {
   margin: 0;
@@ -159,20 +95,6 @@
 .item-row-2 {
   display: flex;
   justify-content: space-between;
-}
-
-/* -------------------------------------------------- */
-/* ---------------- Animation part ------------------ */
-/* -------------------------------------------------- */
-
-@keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 .profile-container {
@@ -185,7 +107,34 @@
   width: 50px;
   border-radius: 50%;
   margin-left: 5px;
-  margin-top: 5px;
+  margin-top: 3px;
+}
+.profile-container p {
+  margin-top: 3px;
+  color: #135ea2;
+  margin-bottom: 5px;
+  
+}
+
+.profile-container-inner {
+  /* border: 3px solid chocolate; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.profile-container-inner img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+
+  margin-top: 3px;
+}
+
+.profile-container-inner p {
+  color: #fff;
+  margin-top: 3px;
 }
 
 .profile-btn {
@@ -204,4 +153,70 @@
   align-items: center;
   font-weight: bold;
   border: none;
+}
+
+.Collapsible__contentOuter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.Collapsible__contentInner {
+  text-align: center;
+  margin-left: 74px;
+  /* background: #00539cff; */
+  background:#9fc5e7;
+  color: #fff;
+  /* border-radius: 10px; */
+  width: 100%;
+  margin: 12px 5px;
+  padding: 20px;
+  /* box-shadow: 0px 17px 0px 20px rgba(0,83,156,1);
+  box-shadow: 0px 17px 6px 24px rgba(0,83,156,1); */
+  border-top: 2px solid #135ea2;
+}
+
+/* .Collapsible__contentInner .offers {
+  color: green;
+} */
+
+
+.job-list-chevron {
+  display: flex;
+  /* align-self: center; */
+  color: chocolate;
+  font-size: 28px;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+.job-description {
+  margin: 0px auto 10px auto;
+  color: #00539cff;
+  text-align: left;
+  width: 100%;
+  /* background-color: rgba(255, 255, 255, 0.5);
+  padding: 5px; */
+}
+
+.job-name {
+  margin-left: 100px;
+}
+
+.job-list-chevron:hover {
+  -webkit-animation: mover 0.5s infinite  alternate;
+  animation: mover 0.5s infinite  alternate;
+}
+.job-list-chevron:hover {
+  -webkit-animation: mover 0.5s infinite  alternate;
+  animation: mover 0.5s infinite  alternate;
+}
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(10px); }
+}
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(10px); }
 }
