--- a/front-end/src/components/Jobs/Jobs.css
+++ b/front-end/src/components/Jobs/Jobs.css
@@ -1,68 +1,24 @@
-/* .MuiGrid-container {
-  display: block !important;
-}
-.slide-enter {
-  opacity: 0;
-  position: absolute;
-}
-.slide-enter-active {
-  opacity: 1;
-  transition: opacity 500ms;
-  position: absolute;
-}
-.slide-exit {
-  opacity: 1;
-  position: absolute;
-}
-.slide-exit-active {
-  opacity: 0;
-  transition: opacity 200ms;
-  position: absolute;
-}
-
-/* appear - on page load */
-/* .fade-appear {
-  opacity: 0;
-  z-index: 1;
-}
-.fade-appear.fade-appear-active {
-  opacity: 1;
-  transition: opacity 1000ms linear;
-}
-
-/* enter */
-/* .fade-enter {
-  opacity: 0;
-  z-index: 1;
-}
-.fade-enter.fade-enter-active {
-  opacity: 1;
-  transition: opacity 5000ms linear 5000ms; */
-/* }
-
-/* exit */
-/* .fade-exit {
-  opacity: 1;
-  position: absolute;
-}
-.fade-exit.fade-exit-active {
-  opacity: 0;
-  transition: opacity 5000ms linear;
-}
-.fade-exit-done {
-  opacity: 0;  */
-/* } */
-
-/* .category-box {
-  margin-bottom: 100px;
-  position: absolute;
-} */
 
 .find-container {
   display: block;
 }
 
+
 .job-container h3 {
-  border-bottom: 1px solid gray;
-  margin-right: 50px;
+  border-bottom: 1px solid rgb(179, 89, 25);
+  width: 55%;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 1em;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+
+.text-center {
+  text-align: center;
+  margin: 25px 0px;
+}
+
+.post-form {
+  margin: 0px 40px;
 }
