Styling: chat navigatichanging while on different pages, animations added. Accordion implemented for your offers

--- a/front-end/src/components/Chat/ChatListItem.css
+++ b/front-end/src/components/Chat/ChatListItem.css
@@ -1,3 +1,8 @@
+.conversation-list {
+  display: flex;
+  flex-direction: column;
+}
+
 .conversation-list-item {
   display: flex;
   align-items: center;
