--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Merriweather:wght@300&family=RocknRoll+One&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,700;1,600&display=swap");
 html {
   box-sizing: border-box;
   margin: 0;
@@ -29,7 +29,7 @@ body {
   border-radius: 30px;
   text-align: center;
   outline: none;
-  margin:5px;
+  margin: 5px;
   border: none;
   background-color: #9fc5e7;
   color: #135ea2;
@@ -50,7 +50,7 @@ body {
   border-radius: 30px;
   text-align: center;
   outline: none;
-  margin:5px;
+  margin: 5px;
   border: none;
   background-color: #135ea2;
   color: #fff;
@@ -67,13 +67,13 @@ body {
 
 .btn-status {
   background-color: rgba(210, 105, 30, 0.7);
-  color: rgba(255,255,255, 0.8);
+  color: rgba(255, 255, 255, 0.8);
   width: 100px;
   height: 40px;
   border-radius: 30px;
   text-align: center;
   outline: none;
-  margin:5px;
+  margin: 5px;
   border: none;
 }
 
@@ -86,7 +86,7 @@ body {
   border-radius: 30px;
   text-align: center;
   outline: none;
-  margin:5px;
+  margin: 5px;
   border: none;
   background-color: #135ea2;
   color: #fff;
@@ -96,4 +96,3 @@ body {
   width: 0px;
   background: transparent; /* make scrollbar transparent */
 }
-
