--- a/front-end/src/components/JobList/JobList.css
+++ b/front-end/src/components/JobList/JobList.css
@@ -14,7 +14,6 @@
   padding: 15px 25px;
 }
 
-
 .item-row {
   display: flex;
   justify-content: space-between;
@@ -23,7 +22,7 @@
 
 .jobListItem h1 {
   margin: 0;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 .pay {
@@ -86,8 +85,6 @@
   border-radius: 5px;
 }
 
-
-
 .item-row-2 h1 {
   margin: 0;
   font-size: 1.3em;
@@ -113,7 +110,6 @@
   margin-top: 3px;
   color: #135ea2;
   margin-bottom: 5px;
-  
 }
 
 .profile-container-inner {
@@ -166,7 +162,7 @@
   text-align: center;
   margin-left: 74px;
   /* background: #00539cff; */
-  background:#9fc5e7;
+  background: #9fc5e7;
   color: #fff;
   /* border-radius: 10px; */
   width: 100%;
@@ -180,7 +176,6 @@
 /* .Collapsible__contentInner .offers {
   color: green;
 } */
-
 
 .job-list-chevron {
   display: flex;
@@ -205,18 +200,26 @@
 }
 
 .job-list-chevron:hover {
-  -webkit-animation: mover 0.5s infinite  alternate;
-  animation: mover 0.5s infinite  alternate;
+  -webkit-animation: mover 0.5s infinite alternate;
+  animation: mover 0.5s infinite alternate;
 }
 .job-list-chevron:hover {
-  -webkit-animation: mover 0.5s infinite  alternate;
-  animation: mover 0.5s infinite  alternate;
+  -webkit-animation: mover 0.5s infinite alternate;
+  animation: mover 0.5s infinite alternate;
 }
 @-webkit-keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(10px); }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
 }
 @keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(10px); }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
 }
