--- a/front-end/src/components/Chat/ChatListItem.css
+++ b/front-end/src/components/Chat/ChatListItem.css
@@ -1,6 +1,9 @@
 .conversation-list {
   display: flex;
   flex-direction: column;
+  /* border: 3px solid blue; */
+  width: 85%;
+  margin: 0 auto;
 }
 
 .conversation-list-item {
