--- a/front-end/src/components/JobToggle/ViewToggle.css
+++ b/front-end/src/components/JobToggle/ViewToggle.css
@@ -1,4 +1,3 @@
-
 .toggle-btn-container .skin {
   border: 3px solid #9fc5e7;
   color: #9fc5e7;
@@ -26,7 +25,6 @@
   border-radius: 12px;
 }
 
-
 .skin:focus:first-of-type {
   border-radius: 30px 12px 12px 30px;
 }
@@ -41,7 +39,6 @@
   border-radius: 12px 30px 30px 12px;
 }
 
-
 .toggle-btn-container .toggle-btn-container button::-moz-focus-inner {
   border: 0;
 }
@@ -52,10 +49,9 @@
 
 .toggle-btn-container {
   margin: 40px;
+  margin-bottom: 25px;
   height: 70px;
-
 }
-
 
 .toggle-btn-container button {
   font-weight: 800;
