--- a/front-end/src/components/Jobs/Jobs.css
+++ b/front-end/src/components/Jobs/Jobs.css
@@ -1,10 +1,8 @@
-
 .find-container {
   display: block;
 }
 
-
-.job-container h3 {
+h3 {
   border-bottom: 1px solid rgb(179, 89, 25);
   width: 55%;
   text-align: center;
@@ -21,4 +19,10 @@
 
 .post-form {
   margin: 0px 40px;
+  background: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-radius: 12px;
 }
