--- a/front-end/src/components/Map/Map.css
+++ b/front-end/src/components/Map/Map.css
@@ -1,38 +1,130 @@
+.map-search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+/* .shake a:hover{ 
+  animation: shake 75ms infinite;
+  animation-timing-function: linear;   
+} */
+
 .find-me {
   position: relative;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.15);
-  margin-left: 5px;
-  border-radius: 10px;
-  /* border: 2px dashed #00539cff; */
-  border: 1px dashed white;
+  background-color: #9fc5e7;
+  margin: 5px;
+  border-radius: 13px;
+  border: 1px solid white;
+  outline: none;
+  width: 50px;
+  height: 50px;
+}
+
+.find-me:hover {
+  -webkit-animation-name: wiggle;
+  -ms-animation-name: wiggle;
+  -ms-animation-duration: 700ms;
+  -webkit-animation-duration: 700ms;
+  -webkit-animation-iteration-count: 1;
+  -ms-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -ms-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotate(10deg);
+  }
+  25% {
+    -webkit-transform: rotate(-15deg);
+  }
+  50% {
+    -webkit-transform: rotate(25deg);
+  }
+  75% {
+    -webkit-transform: rotate(-15deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+  }
+}
+
+@-ms-keyframes wiggle {
+  0% {
+    -ms-transform: rotate(1deg);
+  }
+  25% {
+    -ms-transform: rotate(-1deg);
+  }
+  50% {
+    -ms-transform: rotate(1.5deg);
+  }
+  75% {
+    -ms-transform: rotate(-5deg);
+  }
+  100% {
+    -ms-transform: rotate(0deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(10deg);
+  }
+  25% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(20deg);
+  }
+  75% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .find-me img {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 50%;
 }
 
 .address-search {
   width: 250px;
+  height: 35px;
   position: relative;
+  /* margin-top: 6px;
+  margin-left: 6px; */
+  background-color: rgba(255, 255, 255, 0.9);
+  /* border: 1px solid rgb(175, 175, 175); */
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  padding: 2px 6px;
+  /* text-align: center; */
+}
+
+.address-search:focus {
+  border: none;
 }
 
 .google-map {
   object-fit: contain;
   width: 100%;
+  height: 93%;
+  margin-left: 20px;
+  outline: none;
 }
 
 .map-title {
   font-size: 2em;
   text-align: center;
+  margin-bottom: 8px;
+  color: #0a3a79;
+  font-weight: bold;
 }
-
-/* .gmnoprint {
-  margin-bottom: 80px;
-  background-color: transparent;
-
-} */
-
