--- a/front-end/src/components/Chat/ChatListItem.css
+++ b/front-end/src/components/Chat/ChatListItem.css
@@ -29,7 +29,7 @@
   font-size: 14px;
   font-weight: bold;
   text-transform: capitalize;
-  margin: 0;
+  margin-bottom: 4px;
 }
 
 .conversation-snippet {
