--- a/front-end/src/components/JobList/JobList.css
+++ b/front-end/src/components/JobList/JobList.css
@@ -76,6 +76,10 @@
   border-radius: 10px;
 }
 
+.small-profile {
+  width: 300px;
+}
+
 .status-element {
   pointer-events: none;
   outline: none;
@@ -96,7 +100,9 @@
 
 .profile-container {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  width: 30px;
+  white-space: nowrap;
 }
 
 .profile-container img {
@@ -110,6 +116,7 @@
   margin-top: 3px;
   color: #135ea2;
   margin-bottom: 5px;
+  display: inline-block;
 }
 
 .profile-container-inner {
@@ -149,6 +156,11 @@
   align-items: center;
   font-weight: bold;
   border: none;
+}
+
+.small-profile:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .Collapsible__contentOuter {
