--- a/front-end/src/components/Profile/Profile.css
+++ b/front-end/src/components/Profile/Profile.css
@@ -58,6 +58,7 @@
   width: 75px;
   height: 75px;
   border-radius: 50%;
+  margin-right: 30px;
 }
 
 .reviews {
@@ -92,10 +93,6 @@
   font-size: 16px;
   margin: 0;
   margin-bottom: 3px;
-}
-
-.profile-container img {
-  margin-left: 20px;
 }
 
 .profile-container .username {
