--- a/front-end/src/components/JobList/JobList.css
+++ b/front-end/src/components/JobList/JobList.css
@@ -29,6 +29,11 @@
   margin: 0;
 }
 
+.pay button {
+  position: absolute;
+  right: 15px;
+}
+
 .date {
   position: absolute;
   bottom: 0;
@@ -64,7 +69,7 @@
 }
 
 .small-profile {
-  width: 300px;;
+  width: 300px;
 }
 
 .small-profile img {
@@ -131,7 +136,6 @@
 }
 
 .profile-container-inner {
-  
   display: flex;
   align-items: center;
   justify-content: center;
