--- a/front-end/src/components/Jobs/Jobs.css
+++ b/front-end/src/components/Jobs/Jobs.css
@@ -18,13 +18,22 @@ h3 {
 }
 
 .post-form {
-  margin: 0px 40px;
-  background: #eee;
-  display: flex;
+  /* margin: 0px 40px;
+  background: #eee; */
+/*   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 30px;
-  border-radius: 12px;
+  justify-content: center; */
+  /* padding: 30px;
+  border-radius: 12px; */
+
+  position: relative;
+  background-color: #9fc5e7;
+  color: #00539cff;
+  border-radius: 10px;
+  width: 80%;
+  margin: 12px 5px;
+  padding: 15px 25px;
+
 }
 
 .accordion-show {
