--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -66,7 +66,7 @@ body {
 }
 
 .btn-status {
-  background-color: chocolate;
+  background-color: ;
   color: rgba(255, 255, 255, 0.8);
   width: 100px;
   height: 40px;
