Styling: post form and offers on job postings styled

--- a/front-end/src/components/JobList/JobList.css
+++ b/front-end/src/components/JobList/JobList.css
@@ -1,3 +1,10 @@
+.offer-options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 2px;
+}
+
 .category-box {
   margin-bottom: 45px;
 }
