--- a/front-end/src/components/Jobs/Jobs.css
+++ b/front-end/src/components/Jobs/Jobs.css
@@ -3,7 +3,7 @@
 }
 
 h3 {
-  border-bottom: 1px solid chocolate;
+  border-bottom: 1px solid darkgrey;
   width: 55%;
   text-align: center;
   margin: auto;
