--- a/front-end/src/components/Profile/Profile.css
+++ b/front-end/src/components/Profile/Profile.css
@@ -63,14 +63,14 @@
 
 .reviews {
   margin-top: 25px;
-  /* border: 3px solid chocolate; */
+  /* border: 3px solid darkgrey; */
   width: 95%;
 }
 
 .job-details {
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid chocolate;
+  border-top: 1px solid darkgrey;
 }
 
 .job-details p {
